--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "test": "vitest",
     "dev": "tsx watch src/server.ts",
@@ -13,6 +16,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@fastify/cookie": "^9.1.0",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.24.2",
+    "knex": "^3.0.1",
+    "pg": "^8.11.3",
+    "vitest": "^0.34.6",
+    "zod": "^3.22.4"
+  },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.8.6",
@@ -21,15 +33,7 @@
     "supertest": "^6.3.3",
     "tsup": "^7.2.0",
     "tsx": "^3.13.0",
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "@fastify/cookie": "^9.1.0",
-    "dotenv": "^16.3.1",
-    "fastify": "^4.24.2",
-    "knex": "^3.0.1",
     "sqlite3": "^5.1.6",
-    "vitest": "^0.34.6",
-    "zod": "^3.22.4"
+    "typescript": "^5.2.2"
   }
 }
